# spdx3merge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
src/spdx3merge/: __init__.py  main.py
tests/: test_cli.py
