[project]
name = "spdx3merge"
description = "Merge SPDX 3 data files"
dynamic = ["version"]
dependencies = []
requires-python = ">= 3.9"
authors = [
    {name = "Joshua Watt", email = "JPEWhacker@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "flake8 >= 7.0.0",
    "pytest >= 7.4",
    "pytest-cov >= 4.1",
    "pytest-server-fixtures >= 1.7",
    "shacl2code == 0.0.10",
]

[project.urls]
Homepage = "https://github.com/JPEWdev/spdx3merge"
Repository = "https://github.com/JPEWdev/spdx3merge.git"
Issues = "https://github.com/JPEWdev/spdx3merge/issues"

[project.scripts]
spdx3merge = "spdx3merge:main"

[build-system]
requires = [
    "hatchling",
    "hatch-build-scripts",
    "shacl2code == 0.0.10",
]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/spdx3merge/version.py"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=spdx3merge",
]

[tool.coverage.run]
relative_files = true
omit = [
    "src/spdx3merge/spdx3.py"
]

[[tool.hatch.build.hooks.build-scripts.scripts]]
out_dir = "src/spdx3merge"
commands = [
    "shacl2code generate -i https://spdx.org/rdf/3.0.0/spdx-model.ttl -i https://spdx.org/rdf/3.0.0/spdx-json-serialize-annotations.ttl -x https://spdx.org/rdf/3.0.0/spdx-context.jsonld python -o spdx3.py"
]
artifacts = [
    "/spdx3.py"
]
